Scrollbar display fix

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -121,6 +121,7 @@
     overflow-x: scroll;
     gap: 20px;
 
+    scrollbar-width: none;
     &::-webkit-scrollbar {
         display: none;
     }
